# saic-python-client-ng

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_and_test_python.yml  ci.yml  python-publish.yml
examples/: main.py
net/: security.py  utils.py
net/session/: api.py  login.py
src/: exceptions.py  model.py  saic_api.py  schema.py
src/_net/: security.py
src/_net/client/: api.py  login.py
src/saic_ismart_client/: __init__.py  exceptions.py
src/saic_ismart_client/api/: base.py
src/saic_ismart_client/api/login/: __init__.py
src/saic_ismart_client/api/vehicle/: __init__.py  schema.py
src/saic_ismart_client/net/: security.py
src/saic_ismart_client/net/client/: api.py  login.py
src/saic_ismart_client_ng/: __init__.py  crypto_utils.py  exceptions.py  listener.py  model.py
src/saic_ismart_client_ng/api/: base.py  schema.py  serialization_utils.py
src/saic_ismart_client_ng/api/login/: __init__.py  schema.py
src/saic_ismart_client_ng/api/message/: __init__.py  schema.py
src/saic_ismart_client_ng/api/user/: __init__.py  schema.py
src/saic_ismart_client_ng/api/vehicle/: __init__.py  schema.py
src/saic_ismart_client_ng/api/vehicle/alarm/: __init__.py  schema.py
src/saic_ismart_client_ng/api/vehicle/climate/: __init__.py
src/saic_ismart_client_ng/api/vehicle/locks/: __init__.py  schema.py
src/saic_ismart_client_ng/api/vehicle/windows/: __init__.py  schema.py
src/saic_ismart_client_ng/api/vehicle_charging/: __init__.py  schema.py
src/saic_ismart_client_ng/net/: crypto.py  debug.py  security.py  utils.py
src/saic_ismart_client_ng/net/client/: __init__.py  api.py  login.py
src/saic_ismart_client_ng/net/httpx/: __init__.py
test/: main.py  test_charging_setting_resp.py  test_decode_messages.py  test_vehicle_control_resp.py
tests/: main.py  security_test.py  test_charge_info_resp.py  test_charging_setting_resp.py  test_decode_messages.py  test_listener.py  test_model.py  test_vehicle_control_resp.py
